--- a/Rapid.Dapr.Publisher/Rapid.Dapr.Publisher.csproj
+++ b/Rapid.Dapr.Publisher/Rapid.Dapr.Publisher.csproj
@@ -5,7 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>078b6eff-fd65-4207-8438-bf8efade5612</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	  <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
