--- a/Rapid.Dapr.Subscriber/Rapid.Dapr.Subscriber.csproj
+++ b/Rapid.Dapr.Subscriber/Rapid.Dapr.Subscriber.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>91139400-7600-49ef-8936-337e6cf89276</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
